# food-track-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  README.pl.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
FoodTrack/: .env.example  __init__.py  asgi.py  backends.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
authentication/: adapter.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_remove_profile_daily_carb_goal_and_more.py
diary/: admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_alter_diaryentry_product.py  0003_alter_diaryentry_product.py  0004_dishentry_rename_dish_diaryentry_dish_entry_and_more.py  0005_alter_dishentry_options_dishentry_dish_and_more.py  0006_remove_diaryentry_dish_entry_and_more.py  0007_alter_productentry_weight_goalsentry.py  0008_alter_goalsentry_user.py  0009_remove_goalsentry_created_at_goalsentry_from_date.py  0010_alter_goalsentry_from_date.py  0011_goalsentry_created_at_alter_goalsentry_from_date.py  0012_alter_goalsentry_from_date.py  0013_alter_goalsentry_daily_carb_goal_and_more.py  0014_alter_goalsentry_daily_kcal_goal.py
food_track/: __init__.py  asgi.py  backends.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
products/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_barcode.py  0003_dish.py  0004_delete_dish.py  0005_product_is_verified.py  0006_rename_carbo_for_100_product_carb_and_more.py
